--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: pctGCdata
 Type: Package
 Title: Datasets of GC percentages for human and mouse genomes
-Version: 0.2.0
-Date: 2016-09-21
+Version: 0.3.0
+Date: 2018-12-13
 Depends: R (>= 3.0.0)
 Author: Venkatraman E. Seshan, Nicholas D. Socci
 Maintainer: Venkatraman E. Seshan <seshanv@mskcc.org>
 Description: Provides GC percentage of a 1 kilobase window at a genomic 
-  position for different builds of human and mouse genomes. 
+  position for different builds of human and mouse genomes. Option to
+  supply user-defined gc percentage data for other genomes is available.
 License: GPL (>= 2)
 LazyData: yes
 NeedsCompilation: no
